--- a/views/base.html
+++ b/views/base.html
@@ -7,11 +7,102 @@
       font-style: normal;
       font-variant: normal;
     }
+
+    .styled-table {
+      border-collapse: collapse;
+      margin: 25px 0;
+      font-size: 0.9em;
+      font-family: sans-serif;
+      min-width: 100%;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    }
+
+    .styled-table thead tr {
+      background-color: #009879;
+      color: #ffffff;
+      text-align: left;
+    }
+
+    .styled-table thead th:first-child {
+      width: 30%;
+    }
+
+    .styled-table th,
+    .styled-table td {
+      padding: 12px 15px;
+    }
+
+    .styled-table tbody tr {
+      border-bottom: 1px solid #dddddd;
+    }
+
+    .styled-table tbody tr:nth-of-type(even) {
+      background-color: #f3f3f3;
+    }
+
+    .styled-table tbody tr:last-of-type {
+      border-bottom: 2px solid #009879;
+    }
+
+    .styled-table tbody tr.active-row {
+      font-weight: bold;
+      color: #009879;
+    }
+
+    .styled-table tbody td.wide {
+      text-align: center;
+      font-size: small;
+      font-style: italic;
+    }
+
+    .form-style{
+      font: 13px;
+    }
+
+    .form-style input.input-field{
+      box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      border: 1px solid #C2C2C2;
+      box-shadow: 1px 1px 4px #EBEBEB;
+      -moz-box-shadow: 1px 1px 4px #EBEBEB;
+      -webkit-box-shadow: 1px 1px 4px #EBEBEB;
+      border-radius: 3px;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      padding: 7px;
+      outline: none;
+    }
+    .form-style .input-field:focus{
+      border: 1px solid #009879;
+    }
+
+    .form-style input[type=submit],
+    .form-style input[type=button]{
+      border: none;
+      padding: 8px 15px 8px 15px;
+      background: #FF8500;
+      color: #fff;
+      box-shadow: 1px 1px 4px #DADADA;
+      -moz-box-shadow: 1px 1px 4px #DADADA;
+      -webkit-box-shadow: 1px 1px 4px #DADADA;
+      border-radius: 3px;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+    }
+    .form-style input[type=submit]:hover,
+    .form-style input[type=button]:hover{
+      background: #EA7B00;
+      color: #fff;
+    }
   </style>
 </head>
 <body>
 {% block header %}
 <h1><small>Sandbox Tools</small></h1>
+{% endblock %}
+
+{% block main %}
 {% endblock %}
 </body>
 </html>
