added item check feature

--- a/views/tools-list-manager-items.njk
+++ b/views/tools-list-manager-items.njk
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block header %}
-  <h3>Manage list items</h3>
+  <h2>Manage list items</h2>
 {% endblock %}
 
 {% block main %}
@@ -30,8 +30,13 @@
     </thead>
     <tbody>
     {% for item in data.items %}
-      <tr>
-        <td>{{ item.id }}</td>
+      {% if item.ok %}
+        {% set rowclass = 'active-row'  %}
+      {% else %}
+        {% set rowclass = '' %}
+      {% endif %}
+      <tr class="{{ rowclass }}">
+        <td><a href="" onclick="toggleItem('{{ item.id }}', {{ item.ok }})">{{ item.id }}</a></td>
         <td>{{ item.content }}</td>
         <td><small>{{ item.createdAt }}</small></td>
         <td><small>{{ item.updatedAt }}</small></td>
