--- a/public/base.css
+++ b/public/base.css
@@ -55,7 +55,8 @@ body {
 }
 
 .styled-table tbody tr.active-row {
-  font-weight: bold;
+  font-style: italic;
+  text-decoration: line-through;
   color: #009879;
 }
 
