--- a/views/tools-list-manager-items.njk
+++ b/views/tools-list-manager-items.njk
@@ -51,7 +51,7 @@
   </table>
   <small>List(name = {{ data.name }}; oid={{ data.id }};)</small>
 
-  <script src="../../../tools-list-manager-items.js"></script>
+  <script src="../../../tools-list-manager.js"></script>
 {% endblock %}
 
 
