--- a/views/utils.html
+++ b/views/utils.html
@@ -1,5 +1,5 @@
 {% macro backlink(href, text) %}
-<p class="backlink"><a href="{{ href }}"><< {{ text }}</a></p>
+<p class="backlink"><a id="back-link" href="{{ href }}"><< {{ text }}</a></p>
 {% endmacro %}
 
 
