added access rights management

--- a/views/tools-events-listener.njk
+++ b/views/tools-events-listener.njk
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block header %}
-Welcome, {{ name }}! This is your acces #{{ access }}
+  <h2>Event listener</h2>
 {% endblock %}
