prepare session deletion

--- a/views/tools-access-manager.njk
+++ b/views/tools-access-manager.njk
@@ -37,6 +37,10 @@
           </small>
         </td>
       </tr>
+      <tr>
+        <td><small><b>sessions</b></small></td>
+        <td><a class="tablelink" href="/tools/access/{{ data.uuid }}/sessions">{{  nsessions }}</a></td>
+      </tr>
     {% endif %}
     </tbody>
   </table>
