--- a/views/tools-access-manager.njk
+++ b/views/tools-access-manager.njk
@@ -39,7 +39,7 @@
       </tr>
       <tr>
         <td><small><b>sessions</b></small></td>
-        <td><a class="tablelink" href="/tools/access/{{ data.uuid }}/sessions">{{  nsessions }}</a></td>
+        <td><input type="submit" value="{{  nsessions }} active sessions" onclick="clearSessions()"></td>
       </tr>
     {% endif %}
     </tbody>
