--- a/views/tools-events-listener.njk
+++ b/views/tools-events-listener.njk
@@ -7,7 +7,7 @@
 {% block main %}
 <form class="form-style" method="get" target="_blank" action="/tools/events/stream">
   <input type="hidden" name="_csrf" id="token" value="{{ csrfToken }}" />
-  <input type="text"   class="input-field" name="apikey" placeholder="API Access Key" required/>
+  <input type="text"   class="input-field" name="apikey" value="{{ apiKey }}" placeholder="API Access Key" required readonly/>
   <input type="submit" value="listen events">
 </form>
 {% endblock %}
