starting with lerna

--- a/src/app/public/index.html
+++ b/src/app/public/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="./bye.scss" />
+  <link rel="stylesheet" type="text/css" href="bye.scss" />
 </head>
 <body>
 <section class="bg-red text-center-on-mobile">
