--- a/src/app/resources/index.html
+++ b/src/app/resources/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="../resources/base.css" />
+  <link rel="stylesheet" type="text/css" href="base.css" />
 </head>
 <body>
   <h1>Sandbox Tools</h1>
